--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,3 +18,4 @@ collections:
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Image", name: "image", widget: "image" }
       - { label: "PDF File", name: "pdf", widget: "file", media_folder: "/data/research_pdf", public_folder: "/data/research_pdf" }
+      - { label: "Date", name: "date", widget: "datetime", format: "YYYY-MM-DD" }
