--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: https://github.com/lesley-2198/bongiwe_porfolio.git
+  repo: https://github.com/lesley-2198/bongiwe_porfolio
   branch: main
   base_url: https://api.netlify.com
   auth_endpoint: auth
