--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,6 @@
 backend:
-  name: github
-  repo: https://github.com/lesley-2198/bongiwe_porfolio
+  name: git-gateway
   branch: main
-  base_url: https://api.netlify.com
-  auth_endpoint: auth
 
 media_folder: "images"
 public_folder: "/images"
