Update config.yml to include private erepo scope

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,9 @@ backend:
   name: github
   repo: https://github.com/lesley-2198/bongiwe_porfolio
   branch: main
+  base_url: https://api.netlify.com
+  auth_endpoint: auth
+  auth_scope: repo
 
 media_folder: "images"
 public_folder: "/images"
