--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,10 +1,9 @@
 backend:
   name: github
-  repo: https://github.com/lesley-2198/bongiwe_porfolio
+  repo: lesley-2198/bongiwe_porfolio
   branch: main
   base_url: https://api.netlify.com
   auth_endpoint: auth
-  auth_scope: repo
 
 media_folder: "images"
 public_folder: "/images"
